2001-11-04 17:25 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/classes.c
     __ClsAddMsg() case HB_OO_MSG_ONERROR modifed to use hb_parnl( 3 )

   * source/rtl/tclass.prg
     __ClsAddMsg() call, for ON ERROR clause, modified suplied parameters

2001-11-04 15:54 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! ::Hilite() cursor positioning was wrong for TBrowsers without heading

2001-11-04 13:56 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * bin/bld.bat
   * bin/bld_b16.bat
   * bin/bld_b32.bat
   * bin/bld_vc.bat
   * make_gnu.bat
     ! Removed the LIBMISC.LIB requirement for BCC and VC platforms.
     + Added note to not modify these files as they are templates.

2001-11-03 14:00 GMT+7 Andi Jahja <harbour@cbn.net.id>
   * contrib/rdd_ads/ads1.c
     ! some clean ups

   * contrib/rdd_ads/adsmgmnt.c
     ! add type cast to quite MsVC

2001-11-02 22:50 GMT+1 Martin Vogel <vogel@inttec.de>

   + contrib/libct/keyset.c
     + key switch functions KSETINS, KSETCAPS, KSETNUM, KSETSCROLL
   + contrib/libct/print.c
     + printer functions PRINTSTAT, PRINTREADY
   + contrib/libct/numconv.prg
     + number manipulation functions NTOC, CTON

     all provided by Walter Negro - FOEESITRA <waltern@foeesitra.org.ar>

   * contrib/libct/Makefile
   * contrib/libct/makefile.bc
   * contrib/libct/makefile.vc
   * contrib/libct/ctflist.txt
     * changes according to the above

2001-11-01 05:10 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * harbour/include/hbsetup.h
      * Wrapped HB_FM_STATISTICS in #ifndef test so it can be
        turned off by defining
        HB_FM_STATISTICS_OFF in your make or bat files.

   * harbour/source/rtl/trace.c
      + added HB_TRACESTRING() which lets prg code trace a
         string into same trace file/window as C traces

   * harbour/source/vm/hvm.c
      + added __TRACEPRGCALLS( <lOnOff> ) --> <lOldValue>
         Turns on | off tracing of PRG-level function and